Enable ffmpeg in build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ jobs:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
       submodules: true
     - script: |
-        sudo apt-get update && sudo apt-get install ant -y && sudo rm -rf /var/lib/apt/lists/*
+        sudo apt-get update && sudo apt-get install ant ffmpeg -y && sudo rm -rf /var/lib/apt/lists/*
       displayName: 'Install Ant'
     - task: Gradle@2
       inputs:
@@ -50,7 +50,7 @@ jobs:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
       submodules: true
     - script: |
-        sudo apt-get update && sudo apt-get install ant -y && sudo rm -rf /var/lib/apt/lists/*
+        sudo apt-get update && sudo apt-get install ant ffmpeg -y && sudo rm -rf /var/lib/apt/lists/*
       displayName: 'Install Ant'
     - task: Gradle@2
       inputs:
@@ -84,7 +84,7 @@ jobs:
     - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
       submodules: true
     - script: |
-        sudo apt-get update && sudo apt-get install ant -y && sudo rm -rf /var/lib/apt/lists/*
+        sudo apt-get update && sudo apt-get install ant ffmpeg -y && sudo rm -rf /var/lib/apt/lists/*
       displayName: 'Install Ant'
     - task: Gradle@2
       inputs:
