--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -122,7 +122,7 @@ stages:
       - script: |
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
           set PATH=%PATH%;%ANT_HOME%\bin
-          gradlew build -PjenkinsBuild
+          gradlew build -PjenkinsBuild -PskipRelease
         displayName: 'Gradle Build'
 
       - task: PublishPipelineArtifact@0
@@ -153,7 +153,7 @@ stages:
       - script: |
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars32.bat"
           set PATH=%PATH%;%ANT_HOME%\bin
-          gradlew build -PjenkinsBuild
+          gradlew build -PjenkinsBuild -PskipRelease
         displayName: 'Gradle Build'
 
       - task: PublishPipelineArtifact@0
