--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -99,6 +99,68 @@ stages:
           artifactName: 'Linux'
           targetPath: 'gradleDir/outputs'
 
+  - job: Windows_64_Bit_Release
+    pool:
+      vmImage: 'windows-2019'
+
+    timeoutInMinutes: 0
+
+    steps:
+      - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
+        submodules: true
+      - powershell: |
+          mkdir build
+          $ProgressPreference = 'SilentlyContinue'
+          wget "https://download.java.net/java/ga/jdk11/openjdk-11_windows-x64_bin.zip" -O "build\jdk.zip"
+        displayName: 'Download JDK'
+      - task: JavaToolInstaller@0
+        inputs:
+          jdkSourceOption: localDirectory
+          jdkFile: 'build/jdk.zip'
+          jdkDestinationDirectory: 'build/jdkinst'
+          jdkArchitectureOption: x64
+      - script: |
+          @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
+          set PATH=%PATH%;%ANT_HOME%\bin
+          gradlew build -PjenkinsBuild -PskipDebug
+        displayName: 'Gradle Build'
+
+      - task: PublishPipelineArtifact@0
+        inputs:
+          artifactName: 'Win64Release'
+          targetPath: 'gradleDir/outputs'
+
+  - job: Windows_32_Bit_Release
+    pool:
+      vmImage: 'windows-2019'
+
+    timeoutInMinutes: 0
+
+    steps:
+      - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
+        submodules: true
+      - powershell: |
+          mkdir build
+          $ProgressPreference = 'SilentlyContinue'
+          wget "https://github.com/wpilibsuite/frc-openjdk-windows/releases/download/v11.0.0u28-1/jdk-x86-11.0.0u28-1.zip" -O "build\jdk.zip"
+        displayName: 'Download JDK'
+      - task: JavaToolInstaller@0
+        inputs:
+          jdkSourceOption: localDirectory
+          jdkFile: 'build/jdk.zip'
+          jdkDestinationDirectory: 'build/jdkinst'
+          jdkArchitectureOption: x86
+      - script: |
+          @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars32.bat"
+          set PATH=%PATH%;%ANT_HOME%\bin
+          gradlew build -PjenkinsBuild -PskipDebug
+        displayName: 'Gradle Build'
+
+      - task: PublishPipelineArtifact@0
+        inputs:
+          artifactName: 'Win32Debug'
+          targetPath: 'gradleDir/outputs'
+
   - job: Windows_64_Bit
     pool:
       vmImage: 'windows-2019'
@@ -122,7 +184,7 @@ stages:
       - script: |
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
           set PATH=%PATH%;%ANT_HOME%\bin
-          gradlew build -PjenkinsBuild -PskipRelease
+          gradlew build -PjenkinsBuild -PskipRelease -PskipSources
         displayName: 'Gradle Build'
 
       - task: PublishPipelineArtifact@0
@@ -153,7 +215,7 @@ stages:
       - script: |
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars32.bat"
           set PATH=%PATH%;%ANT_HOME%\bin
-          gradlew build -PjenkinsBuild -PskipRelease
+          gradlew build -PjenkinsBuild -PskipRelease -PskipSources
         displayName: 'Gradle Build'
 
       - task: PublishPipelineArtifact@0
@@ -213,6 +275,14 @@ stages:
     - task: DownloadPipelineArtifact@0
       inputs:
         artifactName: 'Win64'
+        targetPath: 'build-tools/combiner/products/build/allOutputs'
+    - task: DownloadPipelineArtifact@0
+      inputs:
+        artifactName: 'Win32Release'
+        targetPath: 'build-tools/combiner/products/build/allOutputs'
+    - task: DownloadPipelineArtifact@0
+      inputs:
+        artifactName: 'Win64Release'
         targetPath: 'build-tools/combiner/products/build/allOutputs'
     - task: DownloadPipelineArtifact@0
       inputs:
